RESOLVED FIXED134319
[iOS]: Tapping <button> outside of a form is no longer working
https://bugs.webkit.org/show_bug.cgi?id=134319
Summary [iOS]: Tapping <button> outside of a form is no longer working
Joseph Pecoraro
Reported 2014-06-25 17:34:39 PDT
Reduction: <button>Test Button</button> <script> document.addEventListener('click', function() { alert('click'); }, false); </script> This is no longer working. It looks like when upstreaming iOS WebKit we changed HTMLButtonElement::willRespondToMouseClickEvents away from the iOS implementation to the OpenSource (Chromium / Android implementation). We should revert back to the iOS implementation that supports <button> outside of a <form>.
Attachments
[PATCH] Proposed Fix (1.56 KB, patch)
2014-06-25 17:37 PDT, Joseph Pecoraro
dbates: review+
dbates: commit-queue-
Joseph Pecoraro
Comment 1 2014-06-25 17:34:50 PDT
Joseph Pecoraro
Comment 2 2014-06-25 17:37:04 PDT
Created attachment 233856 [details] [PATCH] Proposed Fix
Daniel Bates
Comment 3 2014-06-25 18:38:10 PDT
Comment on attachment 233856 [details] [PATCH] Proposed Fix Can we write a DRT test for this?
Daniel Bates
Comment 4 2014-06-25 18:39:16 PDT
Comment on attachment 233856 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=233856&action=review > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=134319 Please list the radar URL under the WebKit bug URL.
Joseph Pecoraro
Comment 5 2014-06-26 11:34:15 PDT
Joseph Pecoraro
Comment 6 2014-06-26 11:34:37 PDT
(In reply to comment #3) > (From update of attachment 233856 [details]) > Can we write a DRT test for this? Hmm, probably. I'll look into this.
Note You need to log in before you can comment on or make changes to this bug.