[iOS]: Tapping <button> outside of a form is no longer working https://bugs.webkit.org/show_bug.cgi?id=134319 <rdar://problem/17213346>

Reviewed by Daniel Bates.

Restore behavior of allowing <button> clicks outside of <form>.
This used to be iOS behavior before it was removed in favor of the
OpenSource (Android?) behavior. Now, willRespondToMouseClickEvents
is only used by iOS, so lets restore the iOS behavior.

* html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::willRespondToMouseClickEvents):

Canonical link: https://commits.webkit.org/152334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170487 268f45cc-cd09-0410-ab3c-d52691b4dbfc