Source/WebCore/html/HTMLButtonElement.cpp
@@ -154,9 +154,7 @@ void HTMLButtonElement::defaultEventHandler(Event* event)
 
 bool HTMLButtonElement::willRespondToMouseClickEvents()
 {
-    if (!isDisabledFormControl() && form() && (m_type == SUBMIT || m_type == RESET))
-        return true;
-    return HTMLFormControlElement::willRespondToMouseClickEvents();
+    return !isDisabledFormControl();
 }
 
 bool HTMLButtonElement::isSuccessfulSubmitButton() const
